# datamodels

./: .gitignore  README.md  pyproject.toml
datamodels/: observation.py
src/datamodels/: __init__.py
tests/: test_observation.py
