[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamodels"
version = "0.1.1"
description = "Data Models used on ocabox TACOSS software (OCM)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["datamodels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
